--- a/appveyor.yml
+++ b/appveyor.yml
@@ -7,7 +7,7 @@ before_build:
 
 build_script:
 - ps: |
-    & cov-build.exe --dir cov-int msbuild "$Env:APPVEYOR_BUILD_FOLDER\LibuvSharp\LibuvSharp.Tests\LibuvSharp.Tests.csproj" `
+    & cov-build.exe --dir cov-int msbuild "$Env:APPVEYOR_BUILD_FOLDER\LibuvSharp.Tests\LibuvSharp.Tests.csproj" `
       /verbosity:normal `
       /p:Configuration=Release `
       /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" `
