--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ before_build:
 - ps: nuget install xunit.runner.console -Version 2.1.0 -OutputDirectory LibuvSharp\bin\Debug
 
 build_script:
-- ps: msbuild "$Env:APPVEYOR_BUILD_FOLDER\LibuvSharp.Tests\LibuvSharp.Tests.csproj" `
+- ps: msbuild "$Env:APPVEYOR_BUILD_FOLDER\LibuvSharp.Tests\LibuvSharp.Tests.csproj"
 
 test_script:
 - ps: cd LibuvSharp\bin\Debug & xunit.runner.console.2.1.0/tools/xunit.console.exe LibuvSharp.Tests.dll
