--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ clone_folder: C:\projects\libuvsharp
 
 install:
 - ps: Start-FileDownload 'https://github.com/libuv/libuv/archive/v1.7.5.zip'
-- cmd: 7z x v1.7.5.zip & cd libuv-1.7.5 & vcbuild.bat %arch% shared debug
+- cmd: 7z x v1.7.5.zip & cd libuv-1.7.5 & vcbuild.bat x64 shared debug
 - cmd: mkdir c:\projects\libuvsharp\bin\Debug\ & cp libuv-1.7.5\Debug\libuv.dll c:\projects\libuvsharp\bin\Debug\uv.dll
 
 before_build:
